[workspace]
members = [".", "macros"]
resolver = "2"


[package]
name = "trillium-frontend"
version = "0.2.0"
edition = "2024"
description = "Trillium handler for JS/TS frontend projects: proxies a dev server in debug mode, embeds compiled assets in release mode"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jbr/trillium-frontend"
readme = "README.md"
keywords = ["trillium", "frontend", "vite", "spa", "proxy"]
categories = ["web-programming::http-server", "web-programming"]

[features]
dev-proxy = [
        "dep:trillium-proxy",
        "dep:portpicker",
        "trillium-frontend-macros/dev-proxy",
]

[dependencies]
trillium = "0.2"
trillium-frontend-macros = { path = "macros", version = "0.2" }
fieldwork = "0.4"
log = "0.4"
trillium-static-compiled = "0.5"
trillium-client = "0.6"
trillium-proxy = { version = "0.5", optional = true }
portpicker = { version = "0.1", optional = true }

[dev-dependencies]
env_logger = "*"
trillium-smol = "*"
trillium-client = "*"
trillium-logger = "*"
